k8s/todo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
  labels:
    tier: backend
spec:
  selector:
    app: todo
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
